# auto-orm

./: README.md  data.txt  pyproject.toml
src/auto_orm/: __init__.py  cli.py  core.py  test_demo.py
