[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-orm"
version = "0.1.0"
description = "Automatic ORM engine that loads dataclass models from models/ directory"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "rongpanda", email = "roongpanda@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "importlib-metadata; python_version<'3.8'",  # 兼容性依赖
]

[project.urls]
Homepage = "https://github.com/rongpanda/auto-orm"
Repository = "https://github.com/rongpanda/auto-orm"

[project.scripts]
auto-orm = "auto_orm.cli:main"

# 包发现配置
[tool.setuptools.packages.find]
where = ["src"]
include = ["auto_orm*"]

[tool.setuptools.package-dir]
auto_orm = "src/auto_orm"